[gd_scene load_steps=3 format=3 uid="uid://o4pjvvpcbgku"]

[ext_resource type="Script" path="res://src/title_home.gd" id="1_534b2"]
[ext_resource type="SystemFont" uid="uid://be14qyvbd8lox" path="res://assets/fonts/system_font.tres" id="2_xw431"]

[node name="TitleHome" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_534b2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_xw431")
text = "Load"

[node name="NewButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_xw431")
text = "New"

[node name="ModsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_xw431")
text = "Mods"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_xw431")
text = "Settings"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_xw431")
text = "Credits"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_xw431")
text = "Quit"
